sj-infra/grafana/grafana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: sj-infra
spec:
  selector:
    app: grafana
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
