sj-infra/grafana/grafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: sj-infra
  annotations:
    kubernetes.io/ingress.class: nginx
    # 필요한 경우 대용량 데이터를 위해 타임아웃 설정을 추가할 수 있습니다.
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
spec:
  rules:
  - host: grafana.192.168.50.200.sslip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 80
